--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "better-scroll": "^1.15.2",
     "fastclick": "^1.0.6",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^2.6.7",
